[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Pictures/Screenshot Outpost 2021-04-14-11-11-33.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Pictures/Screenshot Outpost 2021-04-14-11-12-02.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Pictures/Screenshot Outpost 2021-04-14-11-12-29.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/Outpost.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Camera.gd" type="Script" id=5]

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.196078, 0.470588, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.725172, 0.725172, 0.725172, 1, 0.151961, 0.151961, 0.151961, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 40

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.508287, 0.853591, 1 )
colors = PoolColorArray( 0.631373, 0.203922, 0.203922, 1, 0.818741, 0.608558, 0.608558, 1, 0.94603, 0.883447, 0.883447, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 40

[node name="Outpost" type="Node2D"]
script = ExtResource( 4 )

[node name="Stage1" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraPoint1" type="Node2D" parent="Stage1"]

[node name="Stage2" type="TextureRect" parent="."]
margin_top = 1080.0
margin_right = 1920.0
margin_bottom = 2160.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraPoint2" type="Node2D" parent="Stage2"]

[node name="Stage3" type="TextureRect" parent="."]
margin_top = 2160.0
margin_right = 1920.0
margin_bottom = 3240.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraPoint3" type="Node2D" parent="Stage3"]

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 5 )

[node name="FadeLayer" type="CanvasLayer" parent="Camera"]

[node name="TextureRect" type="ColorRect" parent="Camera/FadeLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/FadeLayer/TextureRect"]
anims/fade_in = SubResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="TextureButton" type="TextureButton" parent="Camera/CanvasLayer"]
margin_left = 40.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 120.0
texture_normal = SubResource( 3 )
texture_hover = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Camera/CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
